[package]
name = "robinson_modules_test"
version = "0.1.0"
edition = "2021"
description = "Test Version \nThis crate is a direct implementation of the algorithms presented in \"MODULES IN ROBINSON SPACES\" by MIKHAEL  CARMONA,  VICTOR  CHEPOI,  GUYSLAIN  NAVES AND PASCAL  PREA. \nIt can determine if a given square matrice admit a compatible order in O(n²). If it does admit at least one, this crate will provide you with a permutation corresponding to one compatible order."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avl = "0.7.1"
rand = "0.8.5"