[package]
name = "robinson_mmodules"
version = "0.1.3"
edition = "2021"
description = "This crate is a direct implementation of the algorithms presented in \"MODULES IN ROBINSON SPACES\" by MIKHAEL  CARMONA,  VICTOR  CHEPOI,  GUYSLAIN  NAVES AND PASCAL  PREA. \nIt can determine if a given square matrice admit a compatible order in O(n²). If it does admit at least one, this crate will provide you with a permutation corresponding to one compatible order."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/EthanCoss/robinson_mmodules"
repository = "https://github.com/EthanCoss/robinson_mmodules"
keywords = ["dissimilarity-space", "Seriation", "Classification", "Mmodule", "Divide-and-conquer"]

[dependencies]
avl = "0.7.1"
